--- a/.github/workflows/friday_scheduler.yml
+++ b/.github/workflows/friday_scheduler.yml
@@ -16,11 +16,18 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4  # Updated to version 4
       with:
-        python-version: '3.x'
+        python-version: '3.x'  # Replace '3.x' with your specific version if needed
 
     - name: Install dependencies
       run: |
+        pip install --upgrade pip
         pip install gspread oauth2client telnyx pandas
+        pip install google-api-python-client  # Add this line
+
+    - name: Run script
+      run: |
+        python send_sms.py
+
 
     - name: Run script
       run: |
